--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
     </div>
     <hr />
 
+    <div class="newSect">
+      <h2 style="color: red">Alert New!</h2>
+      <h3>Here is the link for Assignment 2 Web Engineering</h3>
+      <h1>
+        <a href="https://ahmedk743.github.io/webeng-assign2/">Visit Site</a>
+      </h1>
+    </div>
+
     <h1 class="title">The Proposal</h1>
     <div class="content">
       <section class="problem">
